[MODIF] initialize old openebench nxf to dsl2 syntax

--- a/openebench/pipeline/nextflow.config
+++ b/openebench/pipeline/nextflow.config
@@ -1,6 +1,6 @@
 // General configuration used in all profiles
 manifest {
-  description = 'TCGA Cancer Driver Genes Benchmark Workflow' 
+  description = 'EUCANCan Benchmark Workflow'
 }
 
 // Profiles configure nextflow depending on the environment (local, integration, live, etc.)
