--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "openebench/pipeline/geniac"]
-	path = openebench/pipeline/geniac
+[submodule "pipeline/geniac"]
+	path = pipeline/geniac
 	url = https://github.com/bioinfo-pf-curie/geniac.git
