--- a/pipeline/conf/geniac.config
+++ b/pipeline/conf/geniac.config
@@ -1,5 +1,4 @@
 params {
-  genomeAnnotationPath = params.genomeAnnotationPath ?: "${projectDir}/../annotations"
 
   geniac {
 
@@ -10,10 +9,9 @@ params {
 
     tools {
       // Add your tools available in conda here, for example:
-      fastqc = "conda-forge::openjdk=8.0.192=h14c3975_1003 bioconda::fastqc=0.11.6=2"
-      python = "conda-forge::python=3.7.8=h6f2ec95_1_cpython conda-forge::pymdown-extensions=7.1=pyh9f0ad1d_0"
-      multiqc = "conda-forge::lzstring=1.0.4=py_1001 conda-forge::matplotlib-base=3.1.1=py37h250f245_2 conda-forge::spectra=0.0.11=py_1 bioconda::multiqc=1.8=py_2"
-      trickySoftware = "${projectDir}/recipes/conda/trickySoftware.yml"
+      snv = "${projectDir}/recipes/conda/snv.yml"
+      sv = "${projectDir}/recipes/conda/sv.yml"
+      plots = "${projectDir}/recipes/conda/plots.yml"
     }
 
     // options for singularity and docker containers
@@ -24,28 +22,18 @@ params {
       // containers are based on CentOS linux
       // some tools require dependcies to be installed with 'yum install'
       // specific dependencies are listed below
-      yum {
-        // example of dependency:
-        fastqc = 'fontconfig dejavu*'
-      }
+      // yum {
+      //   // example of dependency:
+      //   fastqc = 'fontconfig dejavu*'
+      // }
 
-      cmd {
-          post {
-              fastqc = ['echo Hello', 'echo \"This is fastqc tool!\"']
-              multiqc = ['echo Hello', 'echo \"This is multiqc tool!\"']
-              python = ['echo Hello', 'echo \"This is python tool!\"']
-              trickySoftware = ['echo Hello', 'echo \"This is trickySoftware tool!\"']
-              helloWorld = ['echo Hello', 'echo \"This is helloWorld tool!\"']
-          }
-
-          envCustom {
-              fastqc = ['FASTQC_VAR0=\"fastqc tool variable0\"', 'FASTQC_VAR1=\"fastqc tool variable1\"']
-              multiqc = ['MULTIQC_VAR0=\"multiqc tool variable0\"', 'MULTIQC_VAR1=\"multiqc tool variable1\"']
-              python = ['PYTHON_VAR0=\"python tool variable0\"', 'PYTHON_VAR1=\"python tool variable1\"']
-              trickySoftware = ['TRICKYSOFTWARE_VAR0=\"trickySoftware tool variable0\"', 'TRICKYSOFTWARE_VAR1=\"trickySoftware tool variable1\"']
-              helloWorld = ['HELLOWORLD_VAR0=\"helloWorld tool variable0\"', 'HELLOWORLD_VAR1=\"helloWorld tool variable1\"']
-          }
-     }
+     //  cmd {
+     //      post {
+     //      }
+     //
+     //      envCustom {
+     //      }
+     // }
 
       // git {
       // keep this as syntax example
