[UPDATE] nextflow pipeline

--- a/pipeline/conf/base.config
+++ b/pipeline/conf/base.config
@@ -4,6 +4,8 @@
 
 params {
 
+  publishDirMode = 'copy'
+
   // Cluster
   queue = null
 
@@ -26,4 +28,5 @@ params {
 
 env {
     MY_GLOBAL_VAR = "someValue"
+    NXF_OPTS="-Xms1g"
 }
