--- a/pipeline/nextflow.config
+++ b/pipeline/nextflow.config
@@ -37,6 +37,7 @@ params {
 includeConfig 'conf/base.config'
 includeConfig 'conf/process.config'
 includeConfig 'conf/geniac.config'
+includeConfig 'conf/cluster.config'
 
 // Profiles
 profiles {
