--- a/pipeline/recipes/conda/plots.yml
+++ b/pipeline/recipes/conda/plots.yml
@@ -1,8 +1,14 @@
-name: benchmarking_plots 
+name: benchmarking_plots
 channels:
   - defaults
   - bioconda
   - conda-forge
 dependencies:
+  - r-base=4.1.0
   - r-optparse
-  - r-tidyverse=1.3.1=r41hc72bb7e_0
+  - r-ggplot2
+  - r-tidyr=1.1.3
+  - r-dplyr
+  - r-forcats
+  - r-dt
+  - r-tibble
